src/components/ButtonGroup/style.scss
@import '../../scss/variables/colors';

.btn-group {
  display: inline-flex;
  flex-direction: row;
  vertical-align: middle;

  .btn {
    &.active {
      color: $font-primary-color;
      border-color: $border-primary-color;
      background-color: $ui-background-color;

      &:hover {
        background-color: $ui-background-color-hover;
      }
    }

    &:not(:first-child){
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
    }

    &:not(:last-child){
      border-right: 0px;
      border-top-right-radius: 0px;
      border-bottom-right-radius: 0px;
    }
  }
}

